[project]
name = "brw-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.15",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "sqlalchemy>=2.0.42",
]
